# rp2040-hello

./: .gitmodules  Cargo.toml  Embed.toml  LICENSE  README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
docs/: BOOT_SEQUENCE.md  GD_BOOT2.md  OLED_SCREEN.md  README.md  RUN_WITH_RTT.md
xiao2040-bsp/: Cargo.toml  memory.x
xiao2040-bsp/src/: lib.rs
