[package]
name = "rp2040-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7"
cortex-m-rt = "^0.7"
embedded-hal = { version = "^0.2", features = ["unproven"] }
embedded-time = "^0.12"

defmt = "^0.3"
defmt-rtt = "^0.3"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

xiao2040-bsp = { path = "../xiao2040-bsp" }
