[package]
name = "rp2040-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7"
cortex-m-rt = "^0.7"
embedded-hal = { version = "^0.2", features = ["unproven"] }
embedded-time = "^0.12"

defmt = "^0.3"
defmt-rtt = "^0.3"
panic-probe = { version = "^0.3", features = ["print-defmt"] }

xiao2040-bsp = { path = "../xiao2040-bsp" }

nb = "^1.0"
panic-halt= "^0.2"
smart-leds = "^0.3"
pio = "^0.1"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "83fc175fd99f230e477f6fc4a0802e29fd8dcd6f" }
