[package]
name = "xiao2040-bsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "^0.7"
cortex-m-rt = { version = "^0.7", optional = true }
embedded-time = "^0.12"

rp2040-hal = { version="0.3.0", features=["rt"] }
rp2040-boot2 = { version = "0.2.0", optional = true }

[features]
default = ["boot2", "rt"]
# default = ["rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
